crates/service/tests/diagnostics/snapshots/features__diagnostics__unread__conditional.snap
---
source: crates/service/tests/diagnostics/unread.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 15
        },
        "end": {
          "line": 4,
          "character": 16
        }
      },
      "severity": 2,
      "code": "unread",
      "source": "wat",
      "message": "local `0` is set but never read"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 19
        },
        "end": {
          "line": 9,
          "character": 20
        }
      },
      "severity": 2,
      "code": "unread",
      "source": "wat",
      "message": "local `0` is set but never read"
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 15
        },
        "end": {
          "line": 12,
          "character": 16
        }
      },
      "severity": 2,
      "code": "unread",
      "source": "wat",
      "message": "local `0` is set but never read"
    },
    {
      "range": {
        "start": {
          "line": 25,
          "character": 15
        },
        "end": {
          "line": 25,
          "character": 16
        }
      },
      "severity": 2,
      "code": "unread",
      "source": "wat",
      "message": "local `0` is set but never read"
    },
    {
      "range": {
        "start": {
          "line": 36,
          "character": 19
        },
        "end": {
          "line": 36,
          "character": 20
        }
      },
      "severity": 2,
      "code": "unread",
      "source": "wat",
      "message": "local `0` is set but never read"
    },
    {
      "range": {
        "start": {
          "line": 40,
          "character": 14
        },
        "end": {
          "line": 40,
          "character": 15
        }
      },
      "severity": 2,
      "code": "unread",
      "source": "wat",
      "message": "local `0` is set but never read"
    },
    {
      "range": {
        "start": {
          "line": 49,
          "character": 16
        },
        "end": {
          "line": 49,
          "character": 17
        }
      },
      "severity": 2,
      "code": "unread",
      "source": "wat",
      "message": "local `0` is set but never read"
    },
    {
      "range": {
        "start": {
          "line": 56,
          "character": 16
        },
        "end": {
          "line": 56,
          "character": 17
        }
      },
      "severity": 2,
      "code": "unread",
      "source": "wat",
      "message": "local `0` is set but never read"
    },
    {
      "range": {
        "start": {
          "line": 68,
          "character": 18
        },
        "end": {
          "line": 68,
          "character": 19
        }
      },
      "severity": 2,
      "code": "unread",
      "source": "wat",
      "message": "local `1` is set but never read"
    }
  ]
}
